feat(clusters): distributed rabbitmq support
BREAKING CHANGE: the structure of pillar data is changed to
 allow multiple rabbitmq nodes per host. The default nodename
 is 'rabbit@localhost' but this commit allows multiple nodes,
 i.e. 'rabbit2@localhost', 'rabbit3@locahost', to be defined

--- a/pillar.example
+++ b/pillar.example
@@ -2,129 +2,229 @@
 # vim: ft=yaml
 ---
 rabbitmq:
-  cluster:
-    rabbit@locahost:
+  nodes:
+    rabbit:  # default node name
+      clustered: false
       user: rabbit    # 'node' would make more sense here
       host: localhost  # short hostname of node to join to, not fqdn
-      ram_node: None
-      runas: rabbitmq
-      erlang_cookie:
-        name: /var/lib/rabbitmq/.erlang.cookie
-        value: shared-value-for-all-cluster-members
+      nodeport: 5672
+      distport: 25672
+      erlang_cookie: shared-secret
+      config:
+        listeners.tcp.1: 0.0.0.0:5672
+        # https://www.rabbitmq.com/ldap.html
+        # auth_backends.1: ldap
+        # auth_backends.2: internal
+        # auth_ldap.servers.1: ldap.eng.megacorp.local
+        # auth_ldap.servers.2: 192.168.0.100
+        # auth_ldap.user_dn_pattern: cn=${username},ou=People,dc=example,dc=com
+        # auth_ldap.use_ssl: false
+        # auth_ldap.port: 389
+        # auth_ldap.log: false
+      service: true
+      plugins:
+        - rabbitmq_management
+        - rabbitmq_federation
+        - rabbitmq_federation_management
+        # rabbitmq_auth_backend_ldap
+      vhosts:
+        - default_vhost
+      queue:
+        my-new-queue:
+          ## note : dict format
+          user: saltstack_mq
+          passwd: password
+          durable: true
+          auto_delete: false
+          vhost: default_vhost
+          arguments:
+            - x-message-ttl: 8640000
+            - x-expires: 8640000
+            - x-dead-letter-exchange: my-new-exchange
+      binding:
+        my-new-binding:
+          - destination_type: queue
+          - destination: my-new-queue
+          - routing_key: a_routing_key_string
+          - user: saltstack_mq
+          - passwd: 'password'
+          - vhost: default_vhost
+          - arguments:
+              - 'x-message-ttl': 8640000
+      exchange:
+        my-new-exchange:
+          - user: saltstack_mq
+          - passwd: 'password'
+          - type: fanout
+          - durable: true
+          - internal: false
+          - auto_delete: false
+          - vhost: default_vhost
+          - arguments:
+              - 'alternate-**exchange': 'amq.fanout'
+              - 'test-header': 'testing'
+      remove_guest_user: true
+      users:
+        user1:
+          password: password
+          force: true
+          tags:
+            - monitoring
+            - user
+          perms:
+            default_vhost:
+              - '.*'
+              - '.*'
+              - '.*'
+        saltstack_mq:
+          password: password
+          force: false
+          tags:
+            - administrator
+            - management
+          perms:
+            default_vhost:
+              - '.*'
+              - '.*'
+              - '.*'
+        airflow:
+          password: 'airflow'
+          force: true
+          tags:
+            - management
+            - administrator
+          perms:
+            'default_vhost':
+              - '.*'
+              - '.*'
+              - '.*'
+      policy:
+        my-new-rabbitmq-policy:
+          - name: HA
+          - pattern: '.*'
+          - definition: '{"ha-mode": "all"}'
+      upstream:
+        my-new-upstream1:
+          - uri: amqp://saltstack_mq:password@localhost
+          - trust_user_id: true
+          - ack_mode: on-confirm
+
+    rabbit2:
+      clustered: false
+      user: rabbit2    # 'node' would make more sense here
+      host: localhost  # short hostname of node to join to, not fqdn
+      nodeport: 5673
+      distport: 25673
+      erlang_cookie: shared-secret
+      config:
+        listeners.tcp.1: 0.0.0.0:5673
+        # https://www.rabbitmq.com/ldap.html
+        # auth_backends.1: ldap
+        # auth_backends.2: internal
+        # auth_ldap.servers.1: ldap.eng.megacorp.local
+        # auth_ldap.servers.2: 192.168.0.100
+        # auth_ldap.user_dn_pattern: cn=${username},ou=People,dc=example,dc=com
+        # auth_ldap.use_ssl: false
+        # auth_ldap.port: 389
+        # auth_ldap.log: false
+      service: true
+      plugins: []
+      vhosts:
+        - rabbit2_vhost
+      queue:
+        my-new-queue:
+          ## note : dict format
+          user: saltstack_mq
+          passwd: password
+          durable: true
+          auto_delete: false
+          vhost: rabbit2_vhost
+          arguments:
+            - x-message-ttl: 8640000
+            - x-expires: 8640000
+            - x-dead-letter-exchange: my-new-exchange
+      binding:
+        my-new-binding:
+          - destination_type: queue
+          - destination: my-new-queue
+          - routing_key: a_routing_key_string
+          - user: saltstack_mq
+          - passwd: 'password'
+          - vhost: rabbit2_vhost
+          - arguments:
+              - 'x-message-ttl': 8640000
+      exchange:
+        my-new-exchange:
+          - user: saltstack_mq
+          - passwd: 'password'
+          - type: fanout
+          - durable: true
+          - internal: false
+          - auto_delete: false
+          - vhost: rabbit2_vhost
+          - arguments:
+              - 'alternate-**exchange': 'amq.fanout'
+              - 'test-header': 'testing'
+      remove_guest_user: true
+      users:
+        user1:
+          password: password
+          force: true
+          tags:
+            - monitoring
+            - user
+          perms:
+            rabbit2_vhost:
+              - '.*'
+              - '.*'
+              - '.*'
+        saltstack_mq:
+          password: password
+          force: false
+          tags:
+            - administrator
+          perms:
+            rabbit2_vhost:
+              - '.*'
+              - '.*'
+              - '.*'
+        airflow:
+          password: 'airflow'
+          force: true
+          tags:
+            - management
+            - administrator
+          perms:
+            'rabbit2_vhost':
+              - '.*'
+              - '.*'
+              - '.*'
+      policy:
+        my-new-rabbitmq-policy:
+          - name: HA
+          - pattern: '.*'
+          - definition: '{"ha-mode": "all"}'
+      upstream:
+        my-new-upstream1:
+          - uri: amqp://saltstack_mq:password@localhost
+          - trust_user_id: true
+          - ack_mode: on-confirm
+          - max_hops: 1
+
   pkg:
     # https://github.com/rabbitmq/rabbitmq-server/releases/tag/v3.8.14
     use_upstream: repo  # if available (i.e. packagecloud)
-  service:
-    enabled: true
-    running: true
-  config:
-    # see rabbitmq.conf.example from rabbitmq-server github docs
-    # see https://www.rabbitmq.com/configure.html
-    context:
-      listeners.tcp.1: 0.0.0.0:5672
-  env:
+  environ:
     locale_all: en_US.UTF-8
-    context:
-      # https://www.rabbitmq.com/configure.html#supported-environment-variables
-      rabbitmq_mnesia_base: /var/lib/rabbitmq
-      RABBITMQ_BASE: /var/lib/rabbitmq
-      # RABBITMQ_USE_LONGNAME: true  # not working in ci
-      # https://www.rabbitmq.com/configure.html#supported-environment-variables
-      RABBITMQ_LOG_BASE: /var/log/rabbitmq
+    values: {}
+    # https://www.rabbitmq.com/configure.html#supported-environment-variables
+    # rabbitmq_mnesia_base: /var/lib/rabbitmq
+    # RABBITMQ_BASE: /var/lib/rabbitmq
+    # RABBITMQ_USE_LONGNAME: true  # not working in ci
+    # https://www.rabbitmq.com/configure.html#supported-environment-variables
+    # RABBITMQ_LOG_BASE: /var/log/rabbitmq
   dir:
     base: /var/lib/rabbitmq
-
-  vhost:
-    - test_vhost
-
-  binding:
-    my-new-binding:
-      - destination_type: queue
-      - destination: my-new-queue
-      - routing_key: a_routing_key_string
-      - user: saltstack
-      - passwd: 'password'
-      - vhost: test_vhost
-      - arguments:
-          - 'x-message-ttl': 8640000
-
-  queue:
-    my-new-queue:
-      ## note : dict format
-      user: saltstack
-      passwd: password
-      durable: true
-      auto_delete: false
-      vhost: test_vhost
-      arguments:
-        - x-message-ttl: 8640000
-        - x-expires: 8640000
-        - x-dead-letter-exchange: my-new-exchange
-
-  exchange:
-    my-new-exchange:
-      - user: saltstack
-      - passwd: 'password'
-      - type: fanout
-      - durable: true
-      - internal: false
-      - auto_delete: false
-      - vhost: test_vhost
-      - arguments:
-          - 'alternate-**exchange': 'amq.fanout'
-          - 'test-header': 'testing'
-
-  plugin:
-    rabbitmq_management:
-      runas: root
-    rabbitmq_federation:
-      runas: root
-
-  policy:
-    rabbitmq_policy:
-      - name: HA
-      - pattern: '.*'
-      - definition: '{"ha-mode": "all"}'
-
-  upstream:
-    upstream_1:
-      - uri: amqp://saltstack:password@localhost
-      - trust_user_id: true
-      - ack_mode: on-confirm
-      - max_hops: 1
-
-  user:
-    user1:
-      - password: password
-      - force: true
-      - tags: monitoring, user
-      - perms:
-          - '/':
-              - '.*'
-              - '.*'
-              - '.*'
-      - runas: root
-    user2:
-      - password: password
-      - force: true
-      - tags: monitoring, user
-      - perms:
-          - '/':
-              - '.*'
-              - '.*'
-              - '.*'
-      - runas: root
-    saltstack:
-      - password: password
-      - force: false
-      - tags:
-          - administrator
-      - perms:
-          - test_vhost:
-              - '.*'
-              - '.*'
-              - '.*'
-      - runas: root
 
   tofs:
     # The files_switch key serves as a selector for alternative
