--- a/test/integration/default/files/_mapdata/oraclelinux-7.yaml
+++ b/test/integration/default/files/_mapdata/oraclelinux-7.yaml
@@ -1,153 +1,5 @@
+# -*- coding: utf-8 -*-
+# vim: ft=yaml
 # yamllint disable rule:indentation rule:line-length
-# Oracle Linux Server-7
+# Oraclelinux 7
 ---
-values:
-  added_in_defaults: defaults_value
-  added_in_pillar: pillar_value
-  arch: amd64
-  binding:
-    my-new-binding:
-    - destination_type: queue
-    - destination: my-new-queue
-    - routing_key: a_routing_key_string
-    - user: saltstack
-    - passwd: password
-    - vhost: test_vhost
-    - arguments:
-      - x-message-ttl: 8640000
-  cluster:
-    rabbit@locahost:
-      erlang_cookie:
-        name: /var/lib/rabbitmq/.erlang.cookie
-        value: shared-value-for-all-cluster-members
-      host: localhost  # short hostname of node to join to, not fqdn
-      ram_node: None
-      runas: rabbitmq
-      user: rabbit    # 'node' would make more sense here
-  config:
-    context:
-      listeners.tcp.1: 0.0.0.0:5672
-    name: /etc/rabbitmq/rabbitmq.conf
-  dir:
-    base: /var/lib/rabbitmq
-    cleanlist:
-    - /usr/local/bin/rabbitmq-env
-    - /usr/local/bin/rabbitmq-plugins
-    - /var/run/rabbitmq
-    data: /var/lib/rabbitmq
-  env:
-    context:
-      RABBITMQ_BASE: /var/lib/rabbitmq
-      RABBITMQ_LOG_BASE: /var/log/rabbitmq
-      rabbitmq_mnesia_base: /var/lib/rabbitmq
-    locale_all: en_US.UTF-8
-    name: /etc/rabbitmq/rabbitmq-env.conf
-  exchange:
-    my-new-exchange:
-    - user: saltstack
-    - passwd: password
-    - type: fanout
-    - durable: true
-    - internal: false
-    - auto_delete: false
-    - vhost: test_vhost
-    - arguments:
-      - alternate-**exchange: amq.fanout
-      - test-header: testing
-  map_jinja:
-    sources:
-    - Y:G@osarch
-    - Y:G@os_family
-    - Y:G@os
-    - Y:G@osfinger
-    - C@rabbitmq:lookup
-    - C@rabbitmq
-    - Y:G@id
-  pkg:
-    deps: []
-    name: rabbitmq-server
-    use_upstream: repo
-  plugin:
-    rabbitmq_federation:
-      runas: root
-    rabbitmq_management:
-      runas: root
-  policy:
-    rabbitmq_policy:
-    - name: HA
-    - pattern: .*
-    - definition: '{"ha-mode": "all"}'
-  queue:
-    my-new-queue:
-      arguments:
-      - x-message-ttl: 8640000
-      - x-expires: 8640000
-      - x-dead-letter-exchange: my-new-exchange
-      auto_delete: false
-      durable: true
-      passwd: password
-      user: saltstack
-      vhost: test_vhost
-  remove_guest_user: true
-  retry_option:
-    attempts: 0
-    interval: 60
-    splay: 10
-    until: true
-  rootgroup: root
-  service:
-    enabled: true
-    name: rabbitmq-server
-    running: true
-  tofs:
-    files_switch:
-    - any/path/can/be/used/here
-    - id
-    - roles
-    - osfinger
-    - os
-    - os_family
-    source_files:
-      rabbitmq-config-file-file-managed:
-      - example.tmpl.jinja
-  upstream:
-    upstream_1:
-    - uri: amqp://saltstack:password@localhost
-    - trust_user_id: true
-    - ack_mode: on-confirm
-    - max_hops: 1
-  user:
-    saltstack:
-    - password: password
-    - force: false
-    - tags:
-      - administrator
-    - perms:
-      - test_vhost:
-        - .*
-        - .*
-        - .*
-    - runas: root
-    user1:
-    - password: password
-    - force: true
-    - tags: monitoring, user
-    - perms:
-      - /:
-        - .*
-        - .*
-        - .*
-    - runas: root
-    user2:
-    - password: password
-    - force: true
-    - tags: monitoring, user
-    - perms:
-      - /:
-        - .*
-        - .*
-        - .*
-    - runas: root
-  vhost:
-  - test_vhost
-  winner: pillar
