--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -140,11 +140,11 @@ default-debian-10-master-py3: {extends: '.test_instance'}
 # default-debian-9-master-py3: {extends: '.test_instance'}
 default-ubuntu-2004-master-py3: {extends: '.test_instance'}
 default-ubuntu-1804-master-py3: {extends: '.test_instance'}
-# default-centos-8-master-py3: {extends: '.test_instance'}
-# default-centos-7-master-py3: {extends: '.test_instance'}
+default-centos-8-master-py3: {extends: '.test_instance'}
+default-centos-7-master-py3: {extends: '.test_instance'}
 default-fedora-34-master-py3: {extends: '.test_instance'}
 default-fedora-33-master-py3: {extends: '.test_instance'}
-# default-opensuse-leap-153-master-py3: {extends: '.test_instance'}
+default-opensuse-leap-153-master-py3: {extends: '.test_instance'}
 # default-opensuse-leap-152-master-py3: {extends: '.test_instance'}
 # default-opensuse-tmbl-latest-master-py3: {extends: '.test_instance'}
 # default-amazonlinux-2-master-py3: {extends: '.test_instance'}
