--- a/.travis.yml
+++ b/.travis.yml
@@ -100,13 +100,13 @@ jobs:
     # - env: INSTANCE=default-debian-9-master-py3
     - env: INSTANCE=default-ubuntu-2004-master-py3
     - env: INSTANCE=default-ubuntu-1804-master-py3
-    # - env: INSTANCE=default-centos-8-master-py3
-    # - env: INSTANCE=default-centos-7-master-py3
+    - env: INSTANCE=default-centos-8-master-py3
+    - env: INSTANCE=default-centos-7-master-py3
     - env: INSTANCE=default-fedora-34-master-py3
     - env: INSTANCE=default-fedora-33-master-py3
-    # - env: INSTANCE=default-opensuse-leap-153-master-py3
+    - env: INSTANCE=default-opensuse-leap-153-master-py3
     # - env: INSTANCE=default-opensuse-leap-152-master-py3
-    # - env: INSTANCE=default-opensuse-tmbl-latest-master-py3
+    - env: INSTANCE=default-opensuse-tmbl-latest-master-py3
     # - env: INSTANCE=default-amazonlinux-2-master-py3
     # - env: INSTANCE=default-oraclelinux-8-master-py3
     # - env: INSTANCE=default-oraclelinux-7-master-py3
