chore(pillars): update pillar example

--- a/pillar.example
+++ b/pillar.example
@@ -11,16 +11,16 @@ rabbitmq:
       distport: 25672
       erlang_cookie: shared-secret
       config:
+        auth_backends.1: internal   # default
         listeners.tcp.1: 0.0.0.0:5672
         # https://www.rabbitmq.com/ldap.html
-        # auth_backends.1: ldap
-        # auth_backends.2: internal
-        # auth_ldap.servers.1: ldap.eng.megacorp.local
-        # auth_ldap.servers.2: 192.168.0.100
-        # auth_ldap.user_dn_pattern: cn=${username},ou=People,dc=example,dc=com
-        # auth_ldap.use_ssl: false
-        # auth_ldap.port: 389
+        # auth_backends.2: ldap
+        # auth_ldap.servers.1: ldapserver.new
+        # auth_ldap.servers.2: ldapserver.old
+        # auth_ldap.user_dn_pattern: cn=${username},OU=myOrg,DC=example,DC=com
         # auth_ldap.log: false
+        # auth_ldap.dn_lookup_attribute: sAMAccountName  # or userPrincipalName
+        # auth_ldap.dn_lookup_base: OU=myOrg,DC=example,DC=com
       service: true
       plugins:
         - rabbitmq_management
@@ -117,16 +117,16 @@ rabbitmq:
       distport: 25673
       erlang_cookie: shared-secret
       config:
+        auth_backends.1: internal   # default
         listeners.tcp.1: 0.0.0.0:5673
         # https://www.rabbitmq.com/ldap.html
-        # auth_backends.1: ldap
-        # auth_backends.2: internal
-        # auth_ldap.servers.1: ldap.eng.megacorp.local
-        # auth_ldap.servers.2: 192.168.0.100
-        # auth_ldap.user_dn_pattern: cn=${username},ou=People,dc=example,dc=com
-        # auth_ldap.use_ssl: false
-        # auth_ldap.port: 389
+        # auth_backends.2: ldap
+        # auth_ldap.servers.1: ldapserver.new
+        # auth_ldap.servers.2: ldapserver.old
+        # auth_ldap.user_dn_pattern: cn=${username},OU=myOrg,DC=example,DC=com
         # auth_ldap.log: false
+        # auth_ldap.dn_lookup_attribute: sAMAccountName  # or userPrincipalName
+        # auth_ldap.dn_lookup_base: OU=myOrg,DC=example,DC=com
       service: true
       plugins: []
       vhosts:
