--- a/test/integration/default/files/_mapdata/debian-11.yaml
+++ b/test/integration/default/files/_mapdata/debian-11.yaml
@@ -40,6 +40,7 @@ values:
           - x-message-ttl: 8640000
       clustered: false
       config:
+        auth_backends.1: internal
         listeners.tcp.1: 0.0.0.0:5672
       distport: 25672
       erlang_cookie: shared-secret
@@ -140,6 +141,7 @@ values:
           - x-message-ttl: 8640000
       clustered: false
       config:
+        auth_backends.1: internal
         listeners.tcp.1: 0.0.0.0:5673
       distport: 25673
       erlang_cookie: shared-secret
@@ -221,6 +223,8 @@ values:
   pkg:
     deps:
     - libtinfo5
+    - erlang-eldap
+    deps_disablerepo: ''
     name: rabbitmq-server
     use_upstream: repo
   retry_option:
