--- a/test/integration/default/files/_mapdata/ubuntu-20.yaml
+++ b/test/integration/default/files/_mapdata/ubuntu-20.yaml
@@ -42,6 +42,7 @@ values:
           - x-message-ttl: 8640000
       clustered: false
       config:
+        auth_backends.1: internal
         listeners.tcp.1: 0.0.0.0:5672
       distport: 25672
       erlang_cookie: shared-secret
@@ -142,6 +143,7 @@ values:
           - x-message-ttl: 8640000
       clustered: false
       config:
+        auth_backends.1: internal
         listeners.tcp.1: 0.0.0.0:5673
       distport: 25673
       erlang_cookie: shared-secret
@@ -223,6 +225,8 @@ values:
   pkg:
     deps:
     - libtinfo5
+    - erlang-eldap
+    deps_disablerepo: ''
     name: rabbitmq-server
     use_upstream: repo
   retry_option:
