--- a/test/integration/default/files/_mapdata/debian-11.yaml
+++ b/test/integration/default/files/_mapdata/debian-11.yaml
@@ -56,7 +56,6 @@ values:
         - arguments:
           - alternate-**exchange: amq.fanout
           - test-header: testing
-      host: localhost
       nodeport: 5672
       plugins:
       - rabbitmq_management
@@ -91,7 +90,6 @@ values:
         - uri: amqp://saltstack_mq:password@localhost
         - trust_user_id: true
         - ack_mode: on-confirm
-      user: rabbit
       users:
         airflow:
           force: true
@@ -139,7 +137,7 @@ values:
         - vhost: rabbit2_vhost
         - arguments:
           - x-message-ttl: 8640000
-      clustered: false
+      clustered: false              # true
       config:
         auth_backends.1: internal
         listeners.tcp.1: 0.0.0.0:5673
@@ -157,7 +155,7 @@ values:
         - arguments:
           - alternate-**exchange: amq.fanout
           - test-header: testing
-      host: localhost
+      join_node: rabbit@localhost   # create multinode cluster on localhost
       nodeport: 5673
       plugins: []
       policy:
@@ -184,7 +182,6 @@ values:
         - trust_user_id: true
         - ack_mode: on-confirm
         - max_hops: 1
-      user: rabbit2
       users:
         airflow:
           force: true
