--- a/test/integration/default/files/_mapdata/fedora-33.yaml
+++ b/test/integration/default/files/_mapdata/fedora-33.yaml
@@ -60,7 +60,6 @@ values:
         - arguments:
           - alternate-**exchange: amq.fanout
           - test-header: testing
-      host: localhost
       nodeport: 5672
       plugins:
       - rabbitmq_management
@@ -95,7 +94,6 @@ values:
         - uri: amqp://saltstack_mq:password@localhost
         - trust_user_id: true
         - ack_mode: on-confirm
-      user: rabbit
       users:
         airflow:
           force: true
@@ -143,7 +141,7 @@ values:
         - vhost: rabbit2_vhost
         - arguments:
           - x-message-ttl: 8640000
-      clustered: false
+      clustered: false              # true
       config:
         auth_backends.1: internal
         listeners.tcp.1: 0.0.0.0:5673
@@ -161,7 +159,7 @@ values:
         - arguments:
           - alternate-**exchange: amq.fanout
           - test-header: testing
-      host: localhost
+      join_node: rabbit@localhost   # create multinode cluster on localhost
       nodeport: 5673
       plugins: []
       policy:
@@ -188,7 +186,6 @@ values:
         - trust_user_id: true
         - ack_mode: on-confirm
         - max_hops: 1
-      user: rabbit2
       users:
         airflow:
           force: true
