fix(jinja2): use defaults for incomplete pillars

--- a/rabbitmq/parameters/defaults.yaml
+++ b/rabbitmq/parameters/defaults.yaml
@@ -16,7 +16,7 @@ values:
         - rabbitmq_management
         - rabbitmq_federation
         - rabbitmq_federation_management
-        # rabbitmq_auth_backend_ldap
+        - rabbitmq_auth_backend_ldap
       vhosts:
         - '/virtual/host'
       users: {}
