--- a/test/integration/nopillars/files/_mapdata/centos-7.yaml
+++ b/test/integration/nopillars/files/_mapdata/centos-7.yaml
@@ -34,6 +34,7 @@ values:
         - rabbitmq_management
         - rabbitmq_federation
         - rabbitmq_federation_management
+        - rabbitmq_auth_backend_ldap
       policy:
         rabbitmq_policy:
           - name: HA
