--- a/test/integration/default/files/_mapdata/debian-9.yaml
+++ b/test/integration/default/files/_mapdata/debian-9.yaml
@@ -19,6 +19,7 @@ values:
   environ:
     locale_all: en_US.UTF-8
     values: {}
+  erlang_cookie: shared-secret
   map_jinja:
     sources:
     - Y:G@osarch
@@ -45,7 +46,6 @@ values:
         auth_backends.1: internal
         listeners.tcp.1: 0.0.0.0:5672
       distport: 25672
-      erlang_cookie: shared-secret
       exchange:
         my-new-exchange:
         - user: saltstack_mq
@@ -143,7 +143,6 @@ values:
         auth_backends.1: internal
         listeners.tcp.1: 0.0.0.0:5673
       distport: 25673
-      erlang_cookie: shared-secret
       exchange:
         my-new-exchange:
         - user: saltstack_mq
@@ -182,7 +181,7 @@ values:
         - trust_user_id: true
         - ack_mode: on-confirm
         - max_hops: 1
-      join_node: rabbit@localhost   # create multinode cluster on localhost
+      join_node: rabbit   # create multinode cluster on localhost
       users:
         airflow:
           force: true
