--- a/pillar.example
+++ b/pillar.example
@@ -2,6 +2,7 @@
 # vim: ft=yaml
 ---
 rabbitmq:
+  erlang_cookie: shared-secret
   nodes:
     rabbit:  # default node name
       config:
@@ -105,9 +106,8 @@ rabbitmq:
     rabbit2:
       nodeport: 5673
       distport: 25673
-      erlang_cookie: shared-secret
-      clustered: false              # true
-      join_node: rabbit@localhost   # create multinode cluster on localhost
+      clustered: false    # true
+      join_node: rabbit   # create multinode cluster on localhost
       config:
         auth_backends.1: internal   # default
         listeners.tcp.1: 0.0.0.0:5673
